[tool.poetry]
name = "imapxt"
version = "0.1.0"
description = ""
authors = ["XiaoDeng3386 <1744793737@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
rich = "^13.9.4"
pydantic = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
